--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <img src="Netflix-Logo.wine.png" alt="">
         </div>
         <div class="sign">
-            Sign in
+            <a href="1sign in.html">
+            Sign in</a>
         </div>
     </div>
     <div class="body1">
