--- a/1join.html
+++ b/1join.html
@@ -13,8 +13,8 @@
     <div class="center">
    <div class="flex">
     <div class="h2">
-        <h2>DANIEL LOGO</h2>
-        <p>by Getty images</p>
+        <h2>DANIEL NETFLIX</h2>
+        <p>by Getty video</p>
     </div>
     <div class="gap">
     <h3 class="h3">Join</h3>
