--- a/1sign in.html
+++ b/1sign in.html
@@ -13,12 +13,12 @@
     <div class="center">
    <div class="flex">
     <div class="h2">
-        <h2>DANIEL LOGO</h2>
-        <p>by Getty images</p>
+        <h2>DANIEL NETFLIX</h2>
+        <p>by Getty videos</p>
     </div>
     <div class="gap">
     <h3 class="h3">Sign in</h3>
-    <p>Not a member? <a href="1join.html">Join Photo lab </a></p>
+    <p>Not a member? <a href="1join.html">Join My Netflix</a></p>
     <form action="index.html">
         <input type="email
         "  id="text" placeholder="Email or Member name" style="height: 50px; width: 300px; padding: 10px;" required> <br><br>
