--- a/1forget.html
+++ b/1forget.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DANIEL NETFLIX</title>
+    <title>Daniel Netflix</title>
     <link rel="icon" href="daniel logo.jpg">
     <link rel="stylesheet" href="1sign in.css" />
   </head>
@@ -13,8 +13,8 @@
     <div class="center">
    <div class="flex">
     <div class="h2">
-        <h2>DANIEL LOGO</h2>
-        <p>by Getty images</p>
+        <h2>DANIEL NETFLIX</h2>
+        <p>by Getty video</p>
     </div>
     <div class="gap">
     <h3 class="h3">Forgot password?</h3>
