--- a/1sign in.html
+++ b/1sign in.html
@@ -8,39 +8,42 @@
     <link rel="stylesheet" href="1sign in.css" />
   </head>
   <body>
+    <div class="dann"></div>
 
-  <div class="border">
-    <div class="center">
-   <div class="flex">
-    <div class="h2">
-        <h2>DANIEL NETFLIX</h2>
-        <p>by Getty videos</p>
-    </div>
-    <div class="gap">
-    <h3 class="h3">Sign in</h3>
-    <p>Not a member? <a href="1join.html">Join My Netflix</a></p>
-    <form action="index.html">
-        <input type="email
-        "  id="text" placeholder="Email or Member name" style="height: 50px; width: 300px; padding: 10px;" required> <br><br>
-        <input type="password" id="pwd" style="width:300px; height: 50px; padding: 10px;" placeholder="Password" required><br><br>
-        <input type="submit" value="Sign in" class="abutton">
-        <div class="link">
-        <a href="1forget.html">Forgot your password</a></div>
-    </form>
-    </div>
-   </div>
-    </div>
-  <div class="clas">
-    <img src="square-facebook.svg" alt="">
-    <img src="snapchat.svg" alt="">
-    <img src="instagram.svg" alt="">
-    <img src="snapchat.svg" alt="">
-    <img src="twitter.svg" alt="">
-    <img src="snapchat.svg" alt="">
-    <img src="twitter.svg" alt="">
-</div>
-<p style=" color: grey;">created  & surppoted by <a href="danny4@gmail.com"></a>daniel</p>
-</div>
-</div>
+    <div class="navbar">
+      <div class="logo">
+          <b> D-</b>
+          <img src="Netflix-Logo.wine.png" alt="">
+      </div>
+  </div>
+  <div class="body1">
+      <div class="border">
+        <div class="container">
+          <h1>Sign In</h1>
+          <div class="div1">
+          <form action="index.html">
+            <input type="email" placeholder="Email or phone number " required><br><br>
+            <input type="password" placeholder="Password" required><br><br>
+            <button class="button">
+            <input type="submit">
+            </button> <br><br>
+            <div class="a">
+              <a href="Forgot Password?">Forgot Password?</a>
+            </div>
+          </form>
+          </div>
+          <div class="div2">
+            <div class="me">
+            <form action="#">
+              <input type="checkbox" >
+            </form>
+            <p>Remember me</p>
+            </div>
+            <p class="sam">New to D-Netflix? <a href="#">Sign up now</a></p>
+            <p class="ella">This page is protected by Google reCAPTCHA to ensure you're not a bot. <a href="#" class="emma">Learn more.</a></p>
+          </div>
+        </div>
+      </div>
+  </div>
 </body>
 </html>
