--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="emm"></div>
     <div class="navbar">
         <div class="logo">
+            <b> D-</b>
             <img src="Netflix-Logo.wine.png" alt="">
         </div>
         <div class="sign">
@@ -24,7 +25,7 @@
         </h1>
         <p>Watch Anywhere. Cancel Anytime.</p>
         <p>Ready to watch? Enter Your Email to creat or restart your membership.</p>
-        <form action="#">
+        <form action="getstartted.html">
             <input type=" text"  placeholder="Email address">
             <button>
                 <input type="submit" value="Get Started">
