--- a/1join.html
+++ b/1join.html
@@ -13,7 +13,7 @@
     <div class="center">
    <div class="flex">
     <div class="h2">
-        <h2>DANIEL NETFLIX</h2>
+        <h2>D - NETFLIX</h2>
         <p>by Getty video</p>
     </div>
     <div class="gap">
