--- a/getstartted.html
+++ b/getstartted.html
@@ -22,7 +22,7 @@
       <div class="border">
         <p>STEP 1 OF 3</p>
         <h1>Welcome back!</h1>
-        <h1>Joining Netflix is easy.</h1>
+        <h1>Joining D-Netflix is easy.</h1>
         <p>Enter your password and you'll be watching in no time.</p>
         <form action="index.html">
             <input type="password" placeholder="Enter your password" required>
