--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
         <p>Ready to watch? Enter your email to create or restart your membership.</p><br>
-        <form action="#">
+        <form action="getstartted.html">
             <input type=" text"  placeholder="Email address">
             <button>
                 <input type="submit" value="Get Started">
