--- a/index.html
+++ b/index.html
@@ -77,32 +77,32 @@
     <div class="body4">
         <h1>Frequently Asked Questions</h1>
         <div class="button">
-            <button  onclick="myFunction1(event, 'demoss1')"><p>What is Netflix?</p> <img src="Vector (1).png" alt=""></button>
+            <button  onclick="myFunction1(event, 'demoss1')"><p>What is D-Netflix?</p> <img src="Vector (1).png" alt=""></button>
             <div class="daniel" id="demoss1">
-                <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.</p>
+                <p>D-Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.</p>
                 <p>You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!</p>
             </div>
-            <button onclick="myFunction2(event, 'demoss2')"><p>How much does Netflix cost?</p> <img src="Vector (1).png" alt=""></button>
+            <button onclick="myFunction2(event, 'demoss2')"><p>How much does D-Netflix cost?</p> <img src="Vector (1).png" alt=""></button>
             <div class="daniel" id="demoss2">
-             <p>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₦1,200 to ₦4,400 a month. No extra costs, no contracts.</p>
+             <p>D-Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₦1,200 to ₦4,400 a month. No extra costs, no contracts.</p>
             </div>
             <button onclick="myFunction4(event, 'demoss4')"><p>Where can i watch?</p> <img src="Vector (1).png" alt=""></button>
             <div class="daniel" id="demoss4">
-        <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.</p>
-        <p>You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</p>
+        <p>Watch anywhere, anytime. Sign in with your D-Netflix account to watch instantly on the web at daniel-netflix-project.vercel.app from your personal computer or on any internet-connected device that offers the D-Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.</p>
+        <p>You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take D-Netflix with you anywhere.</p>
             </div>
             <button onclick="myFunction5(event, 'demoss5')"><p>How do i Cancel</p> <img src="Vector (1).png" alt=""></button>
             <div class="daniel" id="demoss5">
-                <p>Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees - start or stop your account anytime.</p>
+                <p>D-Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees - start or stop your account anytime.</p>
             </div>
-            <button onclick="myFunction6(event, 'demoss6')"><p>is netflix good for kids?</p> <img src="Vector (1).png" alt=""></button>
+            <button onclick="myFunction6(event, 'demoss6')"><p>is D-netflix good for kids?</p> <img src="Vector (1).png" alt=""></button>
             <div class="daniel" id="demoss6">
-                <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.</p>
+                <p>The D-Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.</p>
                 <p>Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</p>
             </div>
-            <button onclick="myFunction7(event, 'demoss7')"><p>What can i watch on Netflix?</p> <img src="Vector (1).png" alt=""></button>
+            <button onclick="myFunction7(event, 'demoss7')"><p>What can i watch on D-Netflix?</p> <img src="Vector (1).png" alt=""></button>
             <div class="daniel" id="demoss7">
-                <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
+                <p>D-Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning D-Netflix originals, and more. Watch as much as you want, anytime you want.</p>
             </div>
         </div>
         <p>Ready to watch? Enter your email to create or restart your membership.</p><br>
